// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meSchema empty 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'user'",
      "params": {
        "missingProperty": "user",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;

exports[`meSchema missing permissions 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'permissions'",
      "params": {
        "missingProperty": "permissions",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;

exports[`meSchema missing splash 1`] = `
{
  "errors": [
    {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'splash'",
      "params": {
        "missingProperty": "splash",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;
